--- a/src/main/elo-frontend/package.json
+++ b/src/main/elo-frontend/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
     "react-table": "^7.7.0",
+    "swr": "^1.2.2",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
