--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<mainClass>backend.EloApplication</mainClass>
+					<mainClass>io.balancer.elo.EloApplication</mainClass>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
